--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -27,5 +28,4 @@
     "globals": "^15.14.0",
     "vite": "^6.0.5"
   }
-
 }
